# nrolled-new

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  database.py  exceptions.py  knowledge_base.json  logging_config.py  main.py  models.py  schemas.py  seed.py
backend/app/repositories/: __init__.py  chat_repository.py  employee_repository.py  knowledge_repository.py  leave_repository.py  user_repository.py
backend/app/routers/: __init__.py  admin_router.py  auth_router.py  chat_router.py  employee_router.py
backend/app/services/: __init__.py  intent_classifier.py  leave_service.py  llm_service.py  notification_service.py  prompt_templates.py  rag_engine.py
backend/app/utils/: __init__.py  constants.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_and_leave.py  test_leave_and_dashboard.py  test_rag.py
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  stream.js
frontend/src/components/admin/: AuditLogsModal.jsx
frontend/src/components/chat/: ChatInput.jsx  (+4 more)
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  ToastContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminEmployees.jsx  AdminLeaves.jsx  Chat.jsx  EmployeeDashboard.jsx  Landing.jsx  LeaveApplication.jsx  LeaveHistory.jsx  Login.jsx  Profile.jsx
frontend/src/utils/: constants.js  helpers.js
(+19 files in other folders)
